[project]
name = "rate_limiting"
description = "Rate limiting algorithms"
version = "0.0.1"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=8.3.3",
    "black>=24.8.0"
]

[build-system]
requires = ["setuptools >= 74.0"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
pythonpath = "."
minversion = "6.0"
addopts = [
    "--import-mode=importlib",
]
testpaths = [
    "tests",
    "integration",
]
